--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   permission_handler: ^11.3.0
   dio:
   google_fonts: ^6.1.0
+  animate_do: ^3.3.4
+  particles_fly: ^0.0.5
 
 dev_dependencies:
   flutter_test:
