--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   google_fonts: ^6.1.0
   animate_do: ^3.3.4
   particles_fly: ^0.0.5
+  animated_text_kit: ^4.2.2
 
 dev_dependencies:
   flutter_test:
