new ai repo 5:14 PM 12 aug

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   animate_do: ^3.3.4
   particles_fly: ^0.0.5
   animated_text_kit: ^4.2.2
+  speech_to_text: ^7.0.0
+  flutter_tts: ^4.0.2
 
 dev_dependencies:
   flutter_test:
