--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
-        android:label="Jesus-AI"
+        android:label="Veritas AI"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
